hphp/test/quick/method-non-object.php.expectf
HipHop Fatal error: Uncaught exception 'BadMethodCallException' with message 'Call to a member function bar() on a non-object' in %s/test/quick/method-non-object.php:4
Stack trace:
#0 {main}
